# Open-Defender

./: .env.example  002_optimize_analytics.sql  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  index.html  install.html  project_concatenated.txt  project_concatenator.ps1  script.js  styles.css  values.production.yaml
.github/workflows/: CI.yml
benches/: detection_benchmark.rs
config/: config.yaml  development.yaml  mod.rs  namespace.yaml  ports.yaml  production.yaml  services.yaml
docs/: DEPLOYMENT.md  PORT_MANAGEMENT.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  security.yaml  service.yaml
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: comprehensive-dashboard.json  security-dashboard.json
rustcore/: 002_optimize_analytics.sql  Cargo.toml  Dockerfile  README.md  docker-compose.yml  project_concatenated.txt  pyproject.toml
rustcore/benches/: detection_benchmark.rs
rustcore/config/: config.yaml  development.yaml  mod.rs  ports.yaml  production.yaml  services.yaml
rustcore/docs/: DEPLOYMENT.md  NETWORK_TOPOLOGY.md
rustcore/k8s/: configmap.yaml  deployment.yaml  security.yaml  service.yaml
rustcore/nginx/: nginx.conf
rustcore/scripts/: backup.sh  deploy.sh  restore.sh  validate-db-connexion.sh  validate-metrics.sh  validate-resilience.sh  validate-security.sh  validate_network.sh
rustcore/src/: .env  auth.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  project_concatenated.txt  project_concatenator.ps1
rustcore/tests/: integration_tests.rs
scripts/: validate-ports.sh  validate_config.sh
src/: auth.rs  cache.rs  config.rs  health.rs  lib.rs  main.rs
src/analytics/: mod.rs
src/api/: graphql.rs  health.rs
src/collaboration/: mod.rs  rbac.rs
src/collectors/: data_collector.rs  data_event.rs  mod.rs
src/config/: mod.rs
src/controllers/: main_controller.rs
src/database/: failover.rs  mod.rs
src/deployment/: kubernetes.rs
src/distributed/: message_queue.rs
src/error/: mod.rs
src/event_streaming/: mod.rs
src/forensics/: mod.rs
src/health/: mod.rs
src/hooks/: syscall_monitor.rs
src/integrations/: mod.rs
src/ml/: advanced_models.rs  model_manager.rs
src/models/: detector_models.rs  mod.rs
src/network/: port.rs
src/observability/: distributed_tracing.rs  metrics.rs  mod.rs
src/performance/: optimizer.rs
src/repositories/: mod.rs
src/resilience/: circuit_breaker.rs  middleware.rs  mod.rs  retry.rs
src/response/: automation.rs  incident_response.rs  mod.rs  playbooks.rs
src/security/: audit.rs  auth.rs  middleware.rs  mod.rs  secrets.rs
src/service_discovery/: mod.rs
src/threat_intel/: mod.rs
src/utils/: database.rs  telemetry.rs  threat_intel.rs  vulnerability_scanner.rs
src/views/: console_view.rs  dashboard.rs
src/web/: mod.rs
tests/: detection_tests.rs  integration_tests.rs
(+41 files in other folders)
